...
    <string name="app_name">Mini-Synth</string>

    <!-- Header Strings -->
    <string name="header_metronome">MET</string>
    <string name="header_bpm_format">BPM: %d</string>
    <string name="header_demo">DEMO</string>
    <string name="header_stop">STOP</string>
    <string name="header_latency_format">LATENCY: %1$d (%2$d)</string>
    <string name="header_auto">AUTO</string>
    <string name="header_manual">MAN</string>
    <string name="header_help">&#063;</string>
    <string name="generic_on">ON</string>
    <string name="generic_off">OFF</string>
...
    <string name="desc_sequencer_rec">Toggle real-time sequencer recording</string>
    <string name="desc_sequencer_clear">Delete all notes in the current sequence</string>
    <string name="desc_octave_down">Shift keyboard range down one octave</string>
    <string name="desc_octave_up">Shift keyboard range up one octave</string>

    <!-- UI Labels and Buttons -->
    <string name="btn_mode_pads">Pads</string>
    <string name="btn_mode_keys">Keys</string>
    <string name="btn_poly_on">Poly: ON</string>
    <string name="btn_poly_off">Poly: OFF</string>
    <string name="label_octave">Oct:</string>
    <string name="btn_zen_on">ZEN ON</string>
    <string name="btn_zen_off">ZEN OFF</string>
    <string name="btn_brw_on">BRW ON</string>
    <string name="btn_brw_off">BRW OFF</string>
    <string name="btn_projects">PROJ</string>
    <string name="btn_preset_save">Save</string>
    <string name="btn_preset_load">Load</string>
    <string name="btn_mock_rec">REC</string>
    <string name="btn_mock_play">PLAY</string>
    <string name="btn_wave_sine">SINE</string>
    <string name="btn_wave_square">SQR</string>
    <string name="btn_wave_saw">SAW</string>
    <string name="btn_wave_triangle">TRI</string>
    <string name="label_attack">A</string>
    <string name="label_decay">D</string>
...
